# Projet-Programmation-concurrente

./: CMakeLists.txt  generate_pro.py  main.cpp  mainwindow.cpp  masterchef_info.pro
BD/: baseDeDonnees.sql
Controller/: ControleurService.cpp  ControleurService.h  Factory.cpp  Factory.h  TaskManager.cpp  TaskManager.h  ThreadPool.cpp  ThreadPool.h
LIVRABLES FINAUX/Architecture/: Architecture Prog_Concurrente.docx
Model/: PostgreSQLConnection.cpp  PostgreSQLConnection.h
Model/ClassDeclaration/: Carree.h  Chef_de_rang.h  Client.h  Commande.h  Commis_de_salle.h  Ingredient.h  Maitre_d_hotel.h  Menu.h  Personne.h  Plat.h  Position.h  Rang.h  Table.h
Model/ClassDefinition/: Carree.cpp  Chef_de_rang.cpp  Client.cpp  Commande.cpp  Commis_de_salle.cpp  Ingredient.cpp  Maitre_d_hotel.cpp  Menu.cpp  Personne.cpp  Plat.cpp  Position.cpp  Rang.cpp  Serveur.cpp  Table.cpp
ModelClass/ClassDeclaration/: Carree.h  ChefDeRang.h  Chef_dePartie.h  Chef_de_cuisine.h  Chef_de_rang.h  Client.h  Commande.h  Commis_deCuisine.h  Commis_de_salle.h  Ingredients.h  LaveVaisselle.h  Maitre_d_hotel.h  Menu.h  Personne.h  Plat.h  Plongeur.h  Position.h  Rang.h  Serveur.h  Table.h  UstensileDeCuisine.h
ModelClass/ClassDefinition/: Carree.cpp  ChefDeRang.cpp  Chef_dePartie.cpp  Chef_de_cuisine.cpp  Chef_de_rang.cpp  Client.cpp  Commande.cpp  CommisDeSalle.cpp  Commis_deCuisine.cpp  Commis_de_salle.cpp  Ingredients.cpp  LaveVaisselle.cpp  Maitre_d_hotel.cpp  Menu.cpp  Personne.cpp  Plat.cpp  Plongeur.cpp  Position.cpp  Rang.cpp  Serveur.cpp  Table.cpp  UstensileDeCuisine.cpp
View/: InterfaceAcceuil.cpp  InterfaceAcceuil.h  MainWindow.cpp  MainWindow.h  MenuWindows.cpp  MenuWindows.h  RestaurantDashboard.cpp  RestaurantDashboard.h  formulaire.cpp  formulaire.h  vv.cpp
tests/: CMakeLists.txt  FactoryTest.cpp  FormulaireTest.cpp  MainWindowTest.cpp  MenuWindowTest.cpp  PlatTest.cpp  RestaurantDashBoard_test.cpp  TestSample.cpp  main_test.cpp
